# ptctools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  portainer_openapi.yml  pyproject.toml
src/ptctools/: __init__.py  _portainer.py  _s3.py  clean.py  cli.py  config.py  db.py  docker.py  secret.py  stack.py  utils.py  volume.py
src/ptctools/portainer_client/: openapi_client_README.md
src/ptctools/portainer_client/.openapi-generator/: FILES
src/ptctools/portainer_client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/ptctools/portainer_client/openapi_client/api/: __init__.py  auth_api.py  backup_api.py  custom_templates_api.py  docker_api.py  edge_api.py  edge_groups_api.py  edge_jobs_api.py  edge_stacks_api.py  endpoint_groups_api.py  endpoints_api.py  gitops_api.py  helm_api.py  intel_api.py  kubernetes_api.py  ldap_api.py  motd_api.py  registries_api.py  resource_controls_api.py  roles_api.py  settings_api.py  ssl_api.py  stacks_api.py  status_api.py  system_api.py  tags_api.py  team_memberships_api.py  teams_api.py  templates_api.py  upload_api.py  users_api.py  webhooks_api.py  websocket_api.py
src/ptctools/portainer_client/openapi_client/docs/: AuthApi.md  AuthAuthenticatePayload.md  AuthAuthenticateResponse.md  AuthOauthPayload.md  BackupApi.md  BackupBackupPayload.md  BackupRestorePayload.md  BuildBuildInfo.md  BuildDependenciesInfo.md  BuildRuntimeInfo.md  ContainersContainerGpusResponse.md  CustomTemplatesApi.md  CustomtemplatesCustomTemplateUpdatePayload.md  (+391 more)
tests/: test_clean.py  test_config.py  test_stack.py
(+777 files in other folders)
