[project]
name = "ptctools"
version = "0.1.0"
description = "Portainer Client Tools - CLI for managing Portainer from client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ptctools = "ptctools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptctools"]
