[project]
name = "ptctools"
version = "0.2.0"
description = "Portainer Client Tools - CLI for managing Portainer from client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "docker==7.1.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ptctools = "ptctools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptctools"]
